--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
-.hello-world{
+.hello-world {
   text-align: center;
   margin: 30px;
   color: purple;
   font-weight: 500;
   font-size: xx-large;
+}
+
+.container {
+  width: 70%;
+}
+
+footer {
+  margin-top: 30px;
+  text-align: center;
 }
