--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,14 @@
 
 .container {
   width: 70%;
+  color: lightpink;
 }
 
 footer {
   margin-top: 30px;
   text-align: center;
+}
+
+.Meaning h4 {
+  font-weight: 900;
 }
