--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,19 @@
-.hello-world {
+.Title {
   text-align: center;
-  margin: 30px;
-  color: purple;
-  font-weight: 500;
+  padding: 50px 0 20px;
+  color: white;
+  font-weight: 200;
   font-size: xx-large;
+}
+
+.App {
+  background-color: lightpink;
 }
 
 .container {
   width: 70%;
-  color: lightpink;
+  background-color: lightpink;
+  border-radius: 7px;
 }
 
 footer {
@@ -18,4 +23,20 @@ footer {
 
 .Meaning h4 {
   font-weight: 900;
+}
+
+input {
+  display: block;
+  margin: 0 auto;
+  width: 60%;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 3px;
+}
+
+section {
+  background-color: white;
+  border-radius: 7px;
+  padding: 15px;
+  margin: 20px 0 20px 0;
 }
